# near_test

./: .gitignore  Cargo.toml  README.md  build_deploy_test.sh  deploy.sh  test.env  xxx.sol
.near-credentials/mainnet/: sigmund.near.json
fun-token/: Cargo.toml  build.sh
fun-token/src/: lib.rs
near-ft/fun-token/: Cargo.toml
near-js-test/: .eslintrc.json  package-lock.json  package.json
near-js-test/src/: config.ts  index.js  index.ts  near-utils.ts  near.js  near.ts  ref-exchange-utils.ts  ref-farming-utils.ts  reinvest.ts
near-test/: Cargo.toml  README.md  build.sh  build_prod.sh  test.sh
near-test/neardev/: dev-account  dev-account.env
near-test/src/: account.rs  callbacks.rs  contracts_calls.rs  lib.rs  ref_utils.rs  storage_impl.rs  token_receiver.rs  utils.rs
near-test/tests/: some_test.rs  utils.rs
near-test/tests/common/: utils.rs
res/: fun_token.wasm  near_test.wasm
src/: lib.rs
